--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,20 @@
+.main{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 1000px;
+    height: 500px;
+    margin-left: -500px;
+    margin-top: -250px;
+    background-color: darkgreen;
+    border: 5px dashed darkorange;
+}
 .tyyp{
     position: absolute;
     width: 50px;
     height: 50px;
     border-radius: 100px;
+    display: block;
 }
 .tyyp img{
     border-radius: 100px;
@@ -10,12 +22,11 @@
     height: 50px;
 }
 .aot{
-    position: absolute;
+    position: relative;
     width: 50px;
     height: 50px;
-    top: 500px;
-    left: 0px;
     border-radius: 100px;
+    display: block;
 }
 .aot img{
     border-radius: 100px;
